@@ -3,6 +3,8 @@
 # Uncomment this to turn on verbose mode.
 #export DH_VERBOSE=1
 
+include /usr/share/dpkg/pkg-info.mk
+
 DEB_HOST_MULTIARCH ?= $(shell dpkg-architecture -qDEB_HOST_MULTIARCH)
 TMP_HOME_DIR = $(CURDIR)/debian/home
 
@@ -58,6 +60,9 @@ override_dh_install:
 	rm -fv debian/tmp/usr/lib/${DEB_HOST_MULTIARCH}/libqbscore.so.1
 	rm -fv debian/tmp/usr/lib/${DEB_HOST_MULTIARCH}/libqbsqtprofilesetup.so.1
 	dh_install --fail-missing
+
+override_dh_installchangelogs:
+	dh_installchangelogs changelogs/changes-${DEB_VERSION_UPSTREAM}.md
 
 override_dh_strip:
 	dh_strip --dbgsym-migration='qbs-dbg (<< 1.4.5+dfsg-1~)'
